--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,12 @@
                  firebase.initializeApp(config);
                </script>
      <!-- Application Files -->
-     <script src="/scripts/app.js"></script>
+     <
 
     <h4> Hello, World???</h4>
     <script src="/scripts/app.js"></script>
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/RoomCtrl.js"></script>
+    <script src="/scripts/factory/Room.js"></script>
 </body>
 </html>
