--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html ng-app="chatProject">>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Bloc Base Project</title>
-    <link rel="stylesheet" href="/styles/main.css">
-</head>
+    <title>Bloc Chat Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="/styles/main.css">
+  </head>
 <body>
    <ui-view></ui-view>
 
@@ -33,12 +34,12 @@
                  firebase.initializeApp(config);
                </script>
      <!-- Application Files -->
-     <
 
-    <h4> Hello, World???</h4>
+
+
     <script src="/scripts/app.js"></script>
-    <script src="/scripts/controllers/HomeCtrl.js"></script>
-    <script src="/scripts/controllers/RoomCtrl.js"></script>
     <script src="/scripts/factory/Room.js"></script>
+<script src="/scripts/controllers/HomeCtrl.js"></script>
+    
 </body>
 </html>
