--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html ng-app="chatProject">>
+<html ng-app="chatProject">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Chat Project</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/styles/main.css">
   </head>
 <body>
    <ui-view></ui-view>
 
   <!-- Angular -->
-     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
 
      <!-- AngularUI Router -->
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
 
           <!-- FireBase -->
                <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
                <!-- AngularFire -->
-               <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+               <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.js"></script>
 
-
+               <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
                <script>
                  // Initialize Firebase
                  var config = {
@@ -33,13 +33,18 @@
                  };
                  firebase.initializeApp(config);
                </script>
+
+               <!-- AngularUI Bootstrap -->
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js"></script>
      <!-- Application Files -->
 
 
 
     <script src="/scripts/app.js"></script>
-    <script src="/scripts/factory/Room.js"></script>
-<script src="/scripts/controllers/HomeCtrl.js"></script>
-    
+    <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/services/Room.js"></script>
+<script src="/scripts/controllers/ModalCtrl.js"></script>
+
+
 </body>
 </html>
