--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 
   <!-- Angular -->
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
-
+ <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
      <!-- AngularUI Router -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js"></script>
 
@@ -42,8 +42,13 @@
 
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/HomeCtrl.js"></script>
+    <script src="/scripts/controllers/ModalCtrl.js"></script>
+    <script src="/scripts/controllers/setUserModalCtrl.js"></script>
     <script src="/scripts/services/Room.js"></script>
-<script src="/scripts/controllers/ModalCtrl.js"></script>
+    <script src="/scripts/services/BlocChatCookies.js"></script>
+
+
+
 
 
 
